--- a/AppstoreReviews/AppstoreReviews.entitlements
+++ b/AppstoreReviews/AppstoreReviews.entitlements
@@ -14,5 +14,11 @@
 	<array>
 		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
 </dict>
 </plist>
